fix role bg in dark mode

--- a/assets/css/dark.css
+++ b/assets/css/dark.css
@@ -91,7 +91,7 @@
         background-color: #2d2d2d;
     }
 
-    .body-tint main {
+    .body-tint main, .contributor-role {
         background-color: #242424;
     }
 
